== 1.6.5

* Skip all associations defined with the :finder_sql option, since conditions can not be chained to them, etc.
* Fixed bug when using non string values for the keywords condition.

== 1.6.4 released 2009-01-22

* Fixed calling attribute_condition with newer versions of rails.

== 1.6.3 released 2008-12-13

* Added in avg, count, and sum modifiers for SQLite and Postgres.
* Added ne for not_equal condition.
* Ignore :include option for calculations since we don't need it and AR throws an error for polymorphic relationships.
* Removed sum and count since they can not be in the WHERE statement, but must be in the HAVING statement
* Added in auto joins for groups so that the joins don't have to be manually specified.
* Use first column in column_names as the default column for calculations, since a column is required when using DISTINCT and some tables can have more than one primary key.
* On associations see what the first conditions "any" status is to determine if to join with "ANY" or "AND"

== 1.6.2 released 2008-12-13

* Remove duplicate joins at a lower level for a cleaner and less brittle approach.

== 1.6.1 released 2008-12-8

* Group multi faceted conditions since we allow for the mix of "and" and "or"
* Blank arrays are not meaningful values for conditions
* Add in a unique identifier for the auto-generated hidden fields so that multiple forms do no present a problem.

== 1.6.0 released 2008-12-8

* Converted all tree conditions to nested set conditions for performance reasons. A nested set data structure is now required instead of a tree
* Added DISTINCT to select if you are not provided a select, searching, and have joins.
* Included :not_like in the list of conditions to be required upon initialization.

== 1.5.10 released 2008-12-8

* Create class level conditions upon instantiation to avoid conflicts.

== 1.5.9 released 2008-12-3

* Added metaclass object extension for older version of ActiveSupport.
* Added average, count, and sum modifiers.
