@@ -1,17 +1,21 @@
 module Searchlogic
   module Condition
     class Keywords < Base
-      # Because be default it joins with AND, so padding an array just gives you more options. Joining with and is no different than combining all of the words.
-      self.join_arrays_with_or = true
-      
-      BLACKLISTED_WORDS = ('a'..'z').to_a + ["about", "an", "are", "as", "at", "be", "by", "com", "de", "en", "for", "from", "how", "in", "is", "it", "la", "of", "on", "or", "that", "the", "the", "this", "to", "und", "was", "what", "when", "where", "who", "will", "with", "www"] # from ranks.nl        
-      ALLOWED_CHARACTERS = 'àáâãäåßéèêëìíîïñòóôõöùúûüýÿ\-_\.@'
-      
       class << self
         def condition_names_for_column
           super + ["kwords", "kw"]
         end
+        
+        attr_accessor :blacklisted_words, :allowed_characters
       end
+      
+      # Because be default it joins with AND, so padding an array just gives you more options. Joining with and is no different than combining all of the words.
+      self.join_arrays_with_or = true
+      
+      self.blacklisted_words ||= []
+      self.blacklisted_words << ('a'..'z').to_a + ["about", "an", "are", "as", "at", "be", "by", "com", "de", "en", "for", "from", "how", "in", "is", "it", "la", "of", "on", "or", "that", "the", "the", "this", "to", "und", "was", "what", "when", "where", "who", "will", "with", "www"] # from ranks.nl 
+      self.allowed_characters ||= ""
+      self.allowed_characters += 'àáâãäåßéèêëìíîïñòóôõöùúûüýÿ\-_\.@'
       
       def to_conditions(value)
         strs = []
@@ -35,12 +39,12 @@ module Searchlogic
         def replace_non_alnum_characters!(search_parts)
           search_parts.each do |word|
             word.downcase!
-            word.gsub!(/[^[:alnum:]#{ALLOWED_CHARACTERS}]/, '')
+            word.gsub!(/[^[:alnum:]#{self.class.allowed_characters}]/, '')
           end
         end
         
         def remove_blacklisted_words!(search_parts)
-          search_parts.delete_if { |word| word.blank? || BLACKLISTED_WORDS.include?(word.downcase) }
+          search_parts.delete_if { |word| word.blank? || self.class.blacklisted_words.include?(word.downcase) }
         end
     end
   end
